Update hero title and description in index.html

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1 class="hero-title">
-                        <span class="gradient-text">LA EXCELENCIA</span> EN 
-                        <span class="gradient-text">CADA FOTOGRAMA</span>
+                        <span class="gradient-text">EXCELENCIA VISUAL</span><br>
+                        <span style="font-size: 0.9em;">EN CADA <span class="gradient-text">FOTOGRAMA</span></span>
                     </h1>
                     <p class="hero-description">
                         Transformo tus ideas en experiencias visuales impactantes. 
