--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="video-container">
                         <div class="video-label">
                             <span class="video-badge">VIDEO DESTACADO</span>
-                            <h3 class="video-title">GROSSO MODO | HISTORIA DE VIDEOJUEGOS</h3>
+                            <h3 class="video-title">GROSSO MODO</h3>
                         </div>
                         <div class="video-wrapper">
                             <iframe 
