--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             <div class="shorts-grid">
                 <!-- Short 1 -->
                 <div class="short-item">
-                    <div class="short-badge">TIKTOK</div>
+                    <div class="short-badge">Valorant</div>
                     <div class="video-wrapper short-video">
                         <iframe 
                             src="https://drive.google.com/file/d/1VUJdqd4rjyYVq7t7n7mg5vcHMF8bl823/preview" 
