--- a/index.html
+++ b/index.html
@@ -250,13 +250,13 @@
                 <a href="https://www.youtube.com/@PixelHeroRBX/videos" target="_blank" class="channel-item">
                     <div class="channel-avatar">
                         <div class="avatar-circle">
-                            <img src="Imagenes/canales/PixelHeroRBX.jpg" alt="PixelHero RBX" class="channel-image">
+                            <img src="Imagenes/canales/PixelHero.jpg" alt="PixelHero RBX" class="channel-image">
                             <span class="channel-fallback">PH</span>
                         </div>
                         <div class="online-dot"></div>
                     </div>
                     <div class="channel-info">
-                        <h3 class="channel-name">PixelHero RBX</h3>
+                        <h3 class="channel-name">PixelHero</h3>
                         <div class="channel-subs">
                             <i class="fas fa-users"></i>
                             <span>850K suscriptores</span>
