--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                         <h3 class="channel-name">GROSSO MODO</h3>
                         <div class="channel-subs">
                             <i class="fas fa-users"></i>
-                            <span>1.2M suscriptores</span>
+                            <span>4.2K suscriptores</span>
                         </div>
                     </div>
                     <div class="channel-hover">
@@ -318,7 +318,7 @@
                         <h3 class="channel-name">PixelHero</h3>
                         <div class="channel-subs">
                             <i class="fas fa-users"></i>
-                            <span>850K suscriptores</span>
+                            <span>Canal Nuevo</span>
                         </div>
                     </div>
                     <div class="channel-hover">
@@ -340,7 +340,7 @@
                         <h3 class="channel-name">ELKAIDRAM</h3>
                         <div class="channel-subs">
                             <i class="fas fa-users"></i>
-                            <span>500K suscriptores</span>
+                            <span>Canal Nuevo</span>
                         </div>
                     </div>
                     <div class="channel-hover">
@@ -362,7 +362,7 @@
                         <h3 class="channel-name">MORDYTO</h3>
                         <div class="channel-subs">
                             <i class="fas fa-users"></i>
-                            <span>750K suscriptores</span>
+                            <span>12K suscriptores</span>
                         </div>
                     </div>
                     <div class="channel-hover">
@@ -384,7 +384,7 @@
                         <h3 class="channel-name">SOYZER</h3>
                         <div class="channel-subs">
                             <i class="fas fa-users"></i>
-                            <span>620K suscriptores</span>
+                            <span>42K suscriptores</span>
                         </div>
                     </div>
                     <div class="channel-hover">
