--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
                 <div class="portfolio-item">
                     <div class="video-label">
                         <span class="video-badge">ROBLOX</span>
-                        <h3 class="video-title">GROSSO MODO</h3>
+                        <h3 class="video-title">PixelHero</h3>
                     </div>
                     <div class="video-wrapper">
                         <iframe 
-                            src="https://drive.google.com/file/d/1jADoJVfpwFq8vYVurT-xCOzEsRHKmkQJ/preview" 
+                            src="https://drive.google.com/file/d/1fltOOqM74gEBWLYk9V5MYyvoTJoNWqEO/view" 
                             allow="autoplay; encrypted-media; fullscreen"
-                            title="GROSSO MODO - Historia de Videojuegos">
+                            title="Roblox - Roba un Brainrot">
                         </iframe>
                     </div>
                 </div>
