--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                             </div>
                         </div>
                         <p class="review-text">
-                            "Leonardo transformó completamente nuestro contenido de gaming. Su atención al detalle en efectos visuales es impresionante y la entrega siempre es puntual."
+                            "Leonardo transformó completamente mi contenido de Roblox. Su atención al detalle en efectos visuales es impresionante y la entrega siempre es puntual."
                         </p>
                     </div>
                     
@@ -477,7 +477,7 @@
                             </div>
                         </div>
                         <p class="review-text">
-                            "La rapidez de entrega sin sacrificar calidad es increíble. Editó un documental de 30 minutos con efectos complejos en tiempo récord. Muy profesional."
+                            "La rapidez de entrega sin sacrificar calidad es increíble. Edita los videos con efectos complejos en tiempo récord. Muy profesional."
                         </p>
                     </div>
                     
@@ -496,7 +496,7 @@
                             </div>
                         </div>
                         <p class="review-text">
-                            "Trabajé en varios proyectos de gaming con Leonardo y su edición siempre eleva el contenido. Muy profesional y creativo. Los efectos de transición son increíbles."
+                            "Trabajé en varios videos con Leonardo y su edición siempre eleva el contenido a otro nivel. Muy profesional y creativo. Los efectos de transición son increíbles."
                         </p>
                     </div>
                 </div>
