--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     <div class="short-badge">Valorant</div>
                     <div class="video-wrapper short-video">
                         <iframe 
-                            src="https://drive.google.com/file/d/1VUJdqd4rjyYVq7t7n7mg5vcHMF8bl823/preview" 
+                            src="https://youtube.com/shorts/4D11x6A2nw4?si=0hhHRtmXUNRXCXPQ" 
                             allow="autoplay; encrypted-media; fullscreen"
                             title="Valorant Short">
                         </iframe>
@@ -241,7 +241,7 @@
                     <div class="short-badge">TIKTOK</div>
                     <div class="video-wrapper short-video">
                         <iframe 
-                            src="https://drive.google.com/file/d/11uFHyyyfpXXpPtuVEgu-k4svbeyuxBv1/preview" 
+                            src="https://youtube.com/shorts/krYxyC0nz9M?si=8jUlJ75rhk2kdhPI" 
                             allow="autoplay; encrypted-media; fullscreen"
                             title="Roblox Short">
                         </iframe>
@@ -253,7 +253,7 @@
                     <div class="short-badge">TIKTOK</div>
                     <div class="video-wrapper short-video">
                         <iframe 
-                            src="https://drive.google.com/file/d/1ubuF5HNpQLYG3LK41c9i3g_Oby-SoBUJ/preview" 
+                            src="https://youtube.com/shorts/8Izl3zGsOYk?si=QFC-5F2qJfgbD7Vt" 
                             allow="autoplay; encrypted-media; fullscreen"
                             title="Gameplay Short">
                         </iframe>
@@ -265,7 +265,7 @@
                     <div class="short-badge">TIKTOK</div>
                     <div class="video-wrapper short-video">
                         <iframe 
-                            src="https://www.youtube.com/embed/bJP56Z01KJU" 
+                            src="https://youtube.com/shorts/bJP56Z01KJU?si=ghGqmbi51lFxBaaP" 
                             allow="autoplay; encrypted-media; fullscreen"
                             title="YouTube Short">
                         </iframe>
