--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     <div class="short-badge">Valorant</div>
                     <div class="video-wrapper short-video">
                         <iframe 
-                            src=""https://www.youtube.com/embed/4D11x6A2nw4" 
+                            src="https://www.youtube.com/embed/4D11x6A2nw4" 
                             allow="autoplay; encrypted-media; fullscreen"
                             title="Valorant Short">
                         </iframe>
