--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     </div>
                     <div class="video-wrapper">
                         <iframe 
-                            src="https://drive.google.com/file/d/1fltOOqM74gEBWLYk9V5MYyvoTJoNWqEO/view" 
+                            src="https://www.youtube.com/embed/AWvRkUa7wuI" 
                             allow="autoplay; encrypted-media; fullscreen"
                             title="Roblox - Roba un Brainrot">
                         </iframe>
