--- a/index.html
+++ b/index.html
@@ -52,10 +52,16 @@
                         Especializado en edición de video para gaming, documentales 
                         y contenido creativo de alta calidad.
                     </p>
-                    <a href="#contacto" class="cta-button">
-                        <span>CONTÁCTAME</span>
-                        <i class="fas fa-chevron-right"></i>
-                    </a>
+                    <div class="hero-buttons">
+                        <a href="#contacto" class="cta-button">
+                            <span>CONTÁCTAME</span>
+                            <i class="fas fa-chevron-right"></i>
+                        </a>
+                        <a href="#portafolio" class="cta-button portfolio-btn">
+                            <span>VER PORTAFOLIO</span>
+                            <i class="fas fa-video"></i>
+                        </a>
+                    </div>
                 </div>
                 
                 <div class="hero-video">
@@ -531,9 +537,11 @@
                 <p class="contact-description">
                     Trabajemos juntos para crear videos que cautiven a tu audiencia y destaquen tu creatividad.
                 </p>
-                <a href="mailto:contacto@leonardotorres.com" class="cta-button large">
-                    <span>CONTÁCTAME AHORA</span>
-                    <i class="fas fa-paper-plane"></i>
+                <a href="https://twitter.com/intent/tweet?text=@LeonardoXtra%20Hola%20Leonardo,%20me%20interesa%20trabajar%20contigo%20como%20editor%20profesional.%20" 
+                   target="_blank" 
+                   class="cta-button large twitter-btn">
+                    <span>ESCRÍBEME EN X</span>
+                    <i class="fab fa-twitter"></i>
                 </a>
             </div>
         </div>
