--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                 <p class="contact-description">
                     Trabajemos juntos para crear videos que cautiven a tu audiencia y destaquen tu creatividad.
                 </p>
-                <a href="https://twitter.com/intent/tweet?text=@LeonardoXtra%20Hola%20Leonardo,%20me%20interesa%20trabajar%20contigo%20como%20editor%20profesional.%20" 
+                <a href="https://x.com/LeonardoXtra" 
                    target="_blank" 
                    class="cta-button large twitter-btn">
                     <span>ESCRÍBEME EN X</span>
