--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         </div>
     </section>
     
-    <!-- Sección de Shorts - CARRUSEL HORIZONTAL -->
+    <!-- Sección de Shorts - CARRUSEL HORIZONTAL CORREGIDO -->
     <section class="shorts" id="shorts">
         <div class="container">
             <h2 class="section-title">SHORTS <span class="gradient-text">VERTICALES</span></h2>
@@ -322,7 +322,7 @@
         </div>
     </section>
     
-    <!-- Sección de Canales - CARRUSEL HORIZONTAL -->
+    <!-- Sección de Canales - CARRUSEL HORIZONTAL CORREGIDO -->
     <section class="channels" id="canales">
         <div class="container">
             <h2 class="section-title">CANALES <span class="gradient-text">CON LOS QUE COLABORO</span></h2>
