--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         </div>
     </section>
     
-    <!-- Sección de Shorts - CARRUSEL HORIZONTAL CORREGIDO -->
+    <!-- Sección de Shorts - CARRUSEL HORIZONTAL (4 VISIBLES, 1 POR DESPLAZAMIENTO) -->
     <section class="shorts" id="shorts">
         <div class="container">
             <h2 class="section-title">SHORTS <span class="gradient-text">VERTICALES</span></h2>
@@ -318,11 +318,12 @@
             <div class="carousel-indicators">
                 <span class="indicator active" data-index="0"></span>
                 <span class="indicator" data-index="1"></span>
+                <span class="indicator" data-index="2"></span>
             </div>
         </div>
     </section>
     
-    <!-- Sección de Canales - CARRUSEL HORIZONTAL CORREGIDO -->
+    <!-- Sección de Canales - CARRUSEL HORIZONTAL (5 VISIBLES, 1 POR DESPLAZAMIENTO) -->
     <section class="channels" id="canales">
         <div class="container">
             <h2 class="section-title">CANALES <span class="gradient-text">CON LOS QUE COLABORO</span></h2>
@@ -504,6 +505,7 @@
             <div class="carousel-indicators">
                 <span class="indicator active" data-index="0"></span>
                 <span class="indicator" data-index="1"></span>
+                <span class="indicator" data-index="2"></span>
             </div>
         </div>
     </section>
