--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
                 </button>
             </div>
             
-            <!-- Indicadores del carrusel -->
-            <div class="carousel-indicators">
+            <!-- Indicadores del carrusel - MODIFICADO PARA INTEGRARSE CON LA LUZ -->
+            <div class="carousel-indicators shorts-indicators">
                 <span class="indicator active" data-index="0"></span>
                 <span class="indicator" data-index="1"></span>
                 <span class="indicator" data-index="2"></span>
