--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
                 <div class="portfolio-item">
                     <div class="video-label">
                         <span class="video-badge">GAMEPLAY</span>
-                        <h3 class="video-title">ELKAIDRAM Compilation</h3>
+                        <h3 class="video-title">Yandere Simulator</h3>
                     </div>
                     <div class="video-wrapper">
                         <iframe 
-                            src="https://www.youtube.com/embed/L7O-o-ZwEXI" 
+                            src="https://www.youtube.com/embed/0Ue4EhytVAs" 
                             allow="autoplay; encrypted-media; fullscreen"
                             title="ELKAIDRAM - Gameplay">
                         </iframe>
@@ -246,6 +246,7 @@
                     <!-- Short 1 -->
                     <div class="short-item">
                         <div class="short-item-content">
+                            <div class="short-badge">Valorant</div>
                             <div class="video-wrapper short-video">
                                 <iframe 
                                     src="https://www.youtube.com/embed/4D11x6A2nw4" 
@@ -259,6 +260,7 @@
                     <!-- Short 2 -->
                     <div class="short-item">
                         <div class="short-item-content">
+                            <div class="short-badge">Valorant</div>
                             <div class="video-wrapper short-video">
                                 <iframe 
                                     src="https://www.youtube.com/embed/krYxyC0nz9M" 
@@ -272,6 +274,7 @@
                     <!-- Short 3 -->
                     <div class="short-item">
                         <div class="short-item-content">
+                            <div class="short-badge">Valorant</div>
                             <div class="video-wrapper short-video">
                                 <iframe 
                                     src="https://www.youtube.com/embed/8Izl3zGsOYk" 
@@ -285,6 +288,7 @@
                     <!-- Short 4 -->
                     <div class="short-item">
                         <div class="short-item-content">
+                            <div class="short-badge">Roblox</div>
                             <div class="video-wrapper short-video">
                                 <iframe 
                                     src="https://www.youtube.com/embed/bJP56Z01KJU" 
@@ -298,6 +302,7 @@
                     <!-- Short 5 - NUEVO SIN VIDEO -->
                     <div class="short-item">
                         <div class="short-item-content">
+                            <div class="short-badge">Coming Soon</div>
                             <div class="video-wrapper short-video placeholder">
                                 <div class="short-placeholder">
                                     <i class="fas fa-video"></i>
@@ -311,6 +316,7 @@
                     <!-- Short 6 - NUEVO SIN VIDEO -->
                     <div class="short-item">
                         <div class="short-item-content">
+                            <div class="short-badge">Coming Soon</div>
                             <div class="video-wrapper short-video placeholder">
                                 <div class="short-placeholder">
                                     <i class="fas fa-film"></i>
