--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                     <div class="video-container">
                         <div class="video-label">
                             <span class="video-badge">VIDEO DESTACADO</span>
-                            <h3 class="video-title">GROSSO MODO</h3>
+                            <h3 class="video-title">/h3>
                         </div>
                         <div class="video-wrapper">
                             <iframe 
-                                src="https://drive.google.com/file/d/1jADoJVfpwFq8vYVurT-xCOzEsRHKmkQJ/preview" 
+                                src="https://www.youtube.com/embed/4F9oGAKbooY" 
                                 allow="autoplay; encrypted-media; fullscreen"
-                                title="GROSSO MODO - Historia de Videojuegos"
+                                title=""
                                 class="hero-iframe">
                             </iframe>
                         </div>
@@ -147,9 +147,9 @@
                     </div>
                     <div class="video-wrapper">
                         <iframe 
-                            src="https://www.youtube.com/embed/AWvRkUa7wuI" 
+                            src="https://www.youtube.com/embed/RkxQ5WFMcvE" 
                             allow="autoplay; encrypted-media; fullscreen"
-                            title="Roblox - Roba un Brainrot">
+                            title="">
                         </iframe>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                         <iframe 
                             src="https://www.youtube.com/embed/FOVkyj1ykHs" 
                             allow="autoplay; encrypted-media; fullscreen"
-                            title="Video Guía">
+                            title="">
                         </iframe>
                     </div>
                 </div>
@@ -172,13 +172,13 @@
                 <div class="portfolio-item">
                     <div class="video-label">
                         <span class="video-badge">GAMEPLAY</span>
-                        <h3 class="video-title">Yandere Simulator</h3>
+                        <h3 class="video-title"></h3>
                     </div>
                     <div class="video-wrapper">
                         <iframe 
                             src="https://www.youtube.com/embed/0Ue4EhytVAs" 
                             allow="autoplay; encrypted-media; fullscreen"
-                            title="ELKAIDRAM - Gameplay">
+                            title="">
                         </iframe>
                     </div>
                 </div>
@@ -186,13 +186,13 @@
                 <div class="portfolio-item">
                     <div class="video-label">
                         <span class="video-badge">MINECRAFT</span>
-                        <h3 class="video-title">MORDYTO Adventure</h3>
+                        <h3 class="video-title"></h3>
                     </div>
                     <div class="video-wrapper">
                         <iframe 
                             src="https://www.youtube.com/embed/5la0PyjYERc" 
                             allow="autoplay; encrypted-media; fullscreen"
-                            title="MORDYTO - Minecraft">
+                            title="">
                         </iframe>
                     </div>
                 </div>
@@ -201,13 +201,13 @@
                 <div class="portfolio-item">
                     <div class="video-label">
                         <span class="video-badge">DOCUMENTAL</span>
-                        <h3 class="video-title">LOCOFER 3 Edit</h3>
+                        <h3 class="video-title"></h3>
                     </div>
                     <div class="video-wrapper">
                         <iframe 
                             src="https://www.youtube.com/embed/pG7w0IOLjAc" 
                             allow="autoplay; encrypted-media; fullscreen"
-                            title="LOCOFER 3 Edit">
+                            title="">
                         </iframe>
                     </div>
                 </div>
@@ -215,13 +215,13 @@
                 <div class="portfolio-item">
                     <div class="video-label">
                         <span class="video-badge">MINECRAFT</span>
-                        <h3 class="video-title">Minecraft Adventure</h3>
+                        <h3 class="video-title"></h3>
                     </div>
                     <div class="video-wrapper">
                         <iframe 
                             src="https://www.youtube.com/embed/uoGNqLckIw4" 
                             allow="autoplay; encrypted-media; fullscreen"
-                            title="Minecraft Adventure">
+                            title="">
                         </iframe>
                     </div>
                 </div>
@@ -249,7 +249,7 @@
                             <div class="short-badge">Valorant</div>
                             <div class="video-wrapper short-video">
                                 <iframe 
-                                    src="https://www.youtube.com/embed/4D11x6A2nw4" 
+                                    src="https://www.youtube.com/embed/krYxyC0nz9M" 
                                     allow="autoplay; encrypted-media; fullscreen"
                                     title="Valorant Short">
                                 </iframe>
@@ -260,10 +260,10 @@
                     <!-- Short 2 -->
                     <div class="short-item">
                         <div class="short-item-content">
-                            <div class="short-badge">Valorant</div>
+                            <div class="short-badge">Roblox</div>
                             <div class="video-wrapper short-video">
                                 <iframe 
-                                    src="https://www.youtube.com/embed/krYxyC0nz9M" 
+                                    src="https://www.youtube.com/embed/bJP56Z01KJU" 
                                     allow="autoplay; encrypted-media; fullscreen"
                                     title="Roblox Short">
                                 </iframe>
