--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img src="Imagenes/logo.jpeg" alt="Logo Leonardo Torres" class="logo-image" 
                      onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                 <div class="logo-placeholder">
-                    <i class="fas fa-video"></i>
+                    <i class="fas fa-video"> </i>
                 </div>
                 <div class="logo-text-container">
                     <span class="logo-text">LEONARDO TORRES</span>
@@ -75,7 +75,7 @@
                     <div class="video-container">
                         <div class="video-label">
                             <span class="video-badge">VIDEO DESTACADO</span>
-                            <h3 class="video-title">/h3>
+                            <h3 class="video-title"></h3>
                         </div>
                         <div class="video-wrapper">
                             <iframe 
@@ -143,7 +143,7 @@
                 <div class="portfolio-item">
                     <div class="video-label">
                         <span class="video-badge">ROBLOX</span>
-                        <h3 class="video-title">PixelHero</h3>
+                        <h3 class="video-title"></h3>
                     </div>
                     <div class="video-wrapper">
                         <iframe 
@@ -157,7 +157,7 @@
                 <div class="portfolio-item">
                     <div class="video-label">
                         <span class="video-badge">GUÍA</span>
-                        <h3 class="video-title">Video Guía</h3>
+                        <h3 class="video-title"></h3>
                     </div>
                     <div class="video-wrapper">
                         <iframe 
